<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#80252525"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mTvAnswerVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/video_video"
        android:gravity="center_horizontal"
        android:text="@string/answer_recordvideo"
        android:textColor="@color/answer_icon"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/mTvAnswerAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableTop="@drawable/video_voice"
        android:gravity="center_horizontal"
        android:text="@string/answer_recordaudio"
        android:textColor="@color/answer_icon"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/mTvAnswerHangup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableTop="@drawable/video_hangup"
        android:gravity="center_horizontal"
        android:text="@string/answer_hangup"
        android:textColor="@color/answer_icon"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/mTvAnswerWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableTop="@drawable/video_window"
        android:gravity="center_horizontal"
        android:text="@string/answer_window"
        android:textColor="@color/answer_icon"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/mTvAnswerCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableTop="@drawable/video_camera"
        android:gravity="center_horizontal"
        android:text="@string/answer_camera"
        android:textColor="@color/answer_icon"
        android:textSize="@dimen/text_size_14" />

</LinearLayout>