<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_us_background" >

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/about_us_top_title"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/about_us"
        android:textColor="@color/about_us_font"
        android:textSize="@dimen/text_size_22" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:src="@drawable/about_logo" />

    <TextView
        android:id="@+id/tv_software"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/software_name"
        android:textColor="@color/about_us_font"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_software"
        android:layout_marginTop="18dp"
        android:text="@string/software_version"
        android:textColor="@color/about_us_font"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimens_margin_15"
        android:text="@string/copyright" />

</RelativeLayout>